--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@progress/kendo-angular-pdf-export": "^1.1.1",
+    "@progress/kendo-drawing": "^1.5.6",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
